--- a/docs/SQL/03.SQL.AdvancedConcepts.md
+++ b/docs/SQL/03.SQL.AdvancedConcepts.md
@@ -65,6 +65,7 @@ A subquery is a SELECT statement that is nested within another `SELECT`, `INSERT
 
 Here is an example of how you might use a subquery to retrieve the names of all guests who have made a reservation at a specific hotel:
 
+``` sql
 SELECT first_name, last_name
 FROM GUESTS
 WHERE guest_id IN
@@ -73,6 +74,7 @@ WHERE guest_id IN
      INNER JOIN ROOMS ON RESERVATIONS.room_id = ROOMS.room_id
      INNER JOIN HOTELS ON ROOMS.hotel_id = HOTELS.hotel_id
      WHERE HOTELS.name = 'Hotel Name');
+```
 
 ## Window functions
 
@@ -80,15 +82,18 @@ A window function performs a calculation across a set of rows that are related t
 
 Here is an example of how you might use a window function to compute the running total of reservations made by each guest:
 
+``` sql
 SELECT first_name, last_name, count(*) OVER (PARTITION BY guest_id ORDER BY reservation_id) as running_total
 FROM RESERVATIONS
 INNER JOIN GUESTS ON RESERVATIONS.guest_id = GUESTS.guest_id;
+```
 
-# Pivot tables
+#@ Pivot tables
 
 A pivot table is a table that summarizes and rearranges data in a more meaningful and easier to understand format. It allows you to transform rows into columns, and vice versa.
 Here is an example of how you might use a pivot table to summarize the number of reservations made by each guest at each hotel:
 
+``` sql
 SELECT *
 FROM
 (
@@ -104,3 +109,54 @@ PIVOT
     SUM(num_reservations)
     FOR hotel_name IN ([Hotel 1], [Hotel 2], [Hotel 3])
 ) AS pivot_table;
+```
+
+## Recursive SQL 
+
+Recursive SQL refers to the use of recursive common table expressions (CTEs) in SQL. A recursive CTE is a CTE that references itself, allowing you to perform complex queries on hierarchical or recursive data structures, such as trees or graphs.
+
+Here is the basic syntax for defining a recursive CTE:
+
+``` sql
+WITH cte_name (column_name1, column_name2, ...) AS
+(
+    SELECT column_name1, column_name2, ...
+    FROM table_name
+    WHERE condition
+    UNION ALL
+    SELECT column_name1, column_name2, ...
+    FROM cte_name
+    WHERE condition
+)
+```
+
+The UNION ALL operator is used to combine the results of the initial query with the results of the recursive query. The WHERE clause is used to specify the termination condition for the recursion.
+
+Here is an example of how you might use a recursive CTE to build a list of all the ancestors of a specific node in a tree:
+
+``` sql
+WITH ancestors (id, name, parent_id) AS
+(
+    SELECT id, name, parent_id
+    FROM nodes
+    WHERE id = @node_id
+    UNION ALL
+    SELECT n.id, n.name, n.parent_id
+    FROM nodes n
+    INNER JOIN ancestors a ON n.id = a.parent_id
+)
+SELECT id, name, parent_id
+FROM ancestors;
+```
+
+## Additional Topics
+
+There are several more advanced SQL concepts, including:
+
+* Stored procedures: A stored procedure is a pre-compiled collection of SQL statements that can be stored in a database and executed on demand. Stored procedures can be used to encapsulate complex logic and to improve performance by reducing the amount of data that needs to be transmitted between the database and the client.
+
+* Triggers: A trigger is a special type of stored procedure that is automatically executed in response to a specific event, such as the insertion, update, or deletion of a row in a table. Triggers can be used to enforce data integrity, to maintain data history, or to perform other tasks automatically.
+
+* Cursors: A cursor is a database object that allows you to fetch and process rows one at a time from a result set. Cursors can be useful for processing large datasets in a controlled manner, or for iterating through the rows of a result set one at a time.
+
+* Dynamic SQL: Dynamic SQL is a technique that allows you to generate and execute SQL statements dynamically at runtime. It can be used to build flexible and dynamic queries, or to execute statements that cannot be hard-coded in advance.
