--- a/docs/SQL/02.SQL.Tutorial.md
+++ b/docs/SQL/02.SQL.Tutorial.md
@@ -47,7 +47,8 @@ This is just one example of how you might design a relational data model for a h
 Here are some example SELECT queries using the data model I described above:
 
 To retrieve the names and addresses of all hotels:
-```SELECT name, address
+``` sql
+SELECT name, address
 FROM HOTELS;
 To retrieve the names and reservation dates of all guests who have made a reservation at a specific hotel:
 Copy code
@@ -56,67 +57,29 @@ FROM GUESTS G
 INNER JOIN RESERVATIONS R ON G.guest_id = R.guest_id
 INNER JOIN ROOMS RO ON R.room_id = RO.room_id
 INNER JOIN HOTELS H ON RO.hotel_id = H.hotel_id
-WHERE H.name = 'Hotel Name';```
+WHERE H.name = 'Hotel Name';
+```
 
 To retrieve the names and room numbers of all guests currently checked into a specific hotel:
 
-```SELECT G.first_name, G.last_name, RO.room_number
+``` sql
+SELECT G.first_name, G.last_name, RO.room_number
 FROM GUESTS G
 INNER JOIN RESERVATIONS R ON G.guest_id = R.guest_id
 INNER JOIN ROOMS RO ON R.room_id = RO.room_id
 INNER JOIN HOTELS H ON RO.hotel_id = H.hotel_id
 WHERE H.name = 'Hotel Name'
 AND R.check_in <= CURRENT_DATE
-AND R.check_out > CURRENT_DATE;```
+AND R.check_out > CURRENT_DATE;
+```
 
 To retrieve the names and room types of all guests who have stayed at a specific hotel:
 
-```SELECT G.first_name, G.last_name, RO.room_type
+``` sql
+SELECT G.first_name, G.last_name, RO.room_type
 FROM GUESTS G
 INNER JOIN RESERVATIONS R ON G.guest_id = R.guest_id
 INNER JOIN ROOMS RO ON R.room_id = RO.room_id
 INNER JOIN HOTELS H ON RO.hotel_id = H.hotel_id
-WHERE H.name = 'Hotel Name';```
-
-
-# Common Table Expression (CTE)
-
-A Common Table Expression (CTE) is a temporary named result set that you can reference within a `SELECT`, `INSERT`, `UPDATE`, `DELETE`, or `CREATE VIEW` statement. It can be used to simplify complex queries by breaking them up into smaller, more manageable pieces.
-
-A CTE is defined using the `WITH` clause, which precedes the `SELECT`, `INSERT`, `UPDATE`, `DELETE`, or `CREATE VIEW` statement. It can be used to reference one or more CTEs in a single query.
-
-Here is the basic syntax for defining a CTE:
-
-```WITH cte_name (column_name1, column_name2, ...) AS
-(
-    SELECT column_name1, column_name2, ...
-    FROM table_name
-    WHERE condition
-)```
-
-Here is an example of how you might use a CTE to compute the total number of rooms and the total number of occupied rooms in each hotel:
-
-```WITH rooms (hotel_id, num_rooms, num_occupied) AS
-(
-    SELECT R.hotel_id, COUNT(*) AS num_rooms, SUM(CASE WHEN R.room_id IN
-        (SELECT room_id FROM RESERVATIONS WHERE check_in <= CURRENT_DATE AND check_out > CURRENT_DATE) THEN 1 ELSE 0 END) AS num_occupied
-    FROM ROOMS R
-    GROUP BY R.hotel_id
-)
-SELECT H.name, R.num_rooms, R.num_occupied
-FROM HOTELS H
-INNER JOIN rooms R ON H.hotel_id = R.hotel_id;```
-
-Here is another example that uses a CTE to compute the average length of stay for guests at each hotel:
-
-```WITH stays (hotel_id, avg_stay) AS
-(
-    SELECT H.hotel_id, AVG(DATEDIFF(check_out, check_in)) AS avg_stay
-    FROM RESERVATIONS R
-    INNER JOIN ROOMS RO ON R.room_id = RO.room_id
-    INNER JOIN HOTELS H ON RO.hotel_id = H.hotel_id
-    GROUP BY H.hotel_id
-)
-SELECT H.name, S.avg_stay
-FROM HOTELS H
-INNER JOIN stays S ON H.hotel_id = S.hotel_id;```
+WHERE H.name = 'Hotel Name';
+```
