--- a/docs/SQL/03.SQL.AdvancedConcepts.md
+++ b/docs/SQL/03.SQL.AdvancedConcepts.md
@@ -88,7 +88,7 @@ FROM RESERVATIONS
 INNER JOIN GUESTS ON RESERVATIONS.guest_id = GUESTS.guest_id;
 ```
 
-#@ Pivot tables
+# Pivot tables
 
 A pivot table is a table that summarizes and rearranges data in a more meaningful and easier to understand format. It allows you to transform rows into columns, and vice versa.
 Here is an example of how you might use a pivot table to summarize the number of reservations made by each guest at each hotel:
