--- a/docs/SQL/02.SQL.Tutorial.md
+++ b/docs/SQL/02.SQL.Tutorial.md
@@ -48,11 +48,15 @@ This is just one example of how you might design a relational data model for a h
 Here are some example SELECT queries using the data model I described above:
 
 To retrieve the names and addresses of all hotels:
+
 ``` sql
 SELECT name, address
 FROM HOTELS;
+```
+
 To retrieve the names and reservation dates of all guests who have made a reservation at a specific hotel:
-Copy code
+
+``` sql
 SELECT G.first_name, G.last_name, R.check_in, R.check_out
 FROM GUESTS G
 INNER JOIN RESERVATIONS R ON G.guest_id = R.guest_id
