SQL TutorialNew key Vault image

--- a/docs/Keys/01.Overview.md
+++ b/docs/Keys/01.Overview.md
@@ -24,3 +24,5 @@ The benefits of using Composable's built-in Keys are:
 - Ability to Tag Keys or place Keys in Folders, to support a larger project
 - Ability to share Keys at a granular level (e.g., discover, execute, read, write) with Users and Groups
 - Complete Audit trails
+
+![!Composable key Vault](img/keyVault.png)
