--- a/docs/Keys/02.Using-Keys.md
+++ b/docs/Keys/02.Using-Keys.md
@@ -13,7 +13,9 @@ Creating, Searching and Sharing Keys in Composable is extremely easy to do. To g
 
 ![Composable Keys](img/09.02.Img_1.png)
 
-Doing so, will open up your Key Vault, where you can browse all of your Keys (Keys you have created), as well as all Keys shared with you by other users.
+Doing so, will open up your **Key Vault**, where you can browse all of your Keys (Keys you have created), as well as all Keys shared with you by other users.
+
+![!Composable key Vault](img/keyVault.png)
 
 ## Creating a New Key
 
