New key Vault image

--- a/docs/Keys/02.Using-Keys.md
+++ b/docs/Keys/02.Using-Keys.md
@@ -15,7 +15,7 @@ Creating, Searching and Sharing Keys in Composable is extremely easy to do. To g
 
 Doing so, will open up your **Key Vault**, where you can browse all of your Keys (Keys you have created), as well as all Keys shared with you by other users.
 
-![!Composable key Vault](img/keyVault.png)
+![!Composable Key Vault](img/KeyVault.png)
 
 ## Creating a New Key
 
