--- a/docs/Keys/01.Overview.md
+++ b/docs/Keys/01.Overview.md
@@ -25,4 +25,4 @@ The benefits of using Composable's built-in Keys are:
 - Ability to share Keys at a granular level (e.g., discover, execute, read, write) with Users and Groups
 - Complete Audit trails
 
-![!Composable key Vault](img/keyVault.png)
+![!Composable Key Vault](img/KeyVault.png)
