--- a/docs/References/02.SQL.Tutorial.md
+++ b/docs/References/02.SQL.Tutorial.md
@@ -9,7 +9,7 @@ some_url: https://docs.composable.ai
 
 # Overview 
 
-In this section, we will introduce an example **relational data model* `for a hotel reservation system, and then explain how we may query this model to retrieve specific results.
+In this section, we will introduce an example **relational data model** for a hotel reservation system, and then explain how we may query this model to retrieve specific results.
 
 # Example Data Model: Hotel Reservation System
 
