--- a/docs/Getting-Started/03-2.Deployment-Scripts.md
+++ b/docs/Getting-Started/03-2.Deployment-Scripts.md
@@ -48,6 +48,7 @@ The following table provides the Command Line options available with the Composa
 | `LAUNCH_WEB_SITE`                     |Launches browser and opens Composable                                                                                                                                                                                                                                                                                                                                                                             |FALSE                         |TRUE                                |
 | `RUNSFOLDER`                          |Folder path to location where runs are stored                                                                                                                                                                                                                                                                                                                                                                     |E:\folder\runs\               |C:\program files\companalytics\runs\|
 | `INSTANCE_SECRET`                     |Complex secret for encrypting keys in Composable                                                                                                                                                                                                                                                                                                                                                                  |Long Random String            |auto-generated                      |
+| `SKIP_SQL_INSTALL`                    |If `true`,  skips any installation of Sql Server Express                                                                                                                                                                                                                                                                                                                                                          |TRUE                          |FALSE                               |
 | `FEATURES`                            |Comma delimited list of features to install. Options are: `MembershipStoreFeature`, `DatabaseFeature`, `ManagerFeature`, `WebApplicationFeature`,  `ActivationServiceFeature`, `CustodianServiceFeature`, `DataCatalogServiceFeature`, `DataLabServiceFeature`,  `MatlabServiceFeature`, `InteropServiceFeature`, `VS2012TemplateFeature`, `VS2013TemplateFeature`,  `VS2015TemplateFeature`, `VS2017TemplateFeature`, `VS2019TemplateFeature`|                              |                                    |
 
 
