--- a/docs/DataPortals/04.ContainerSheet.md
+++ b/docs/DataPortals/04.ContainerSheet.md
@@ -39,6 +39,7 @@ The three required columns, [Name,](06.Setting-Details/Name.md) [Type,](06.Setti
 - [Table:](05.Control-Details/Table.md) Display a table of instances of a child container.
 - [Text:](05.Control-Details/Text.md) Enter a short string.
 - [Textarea:](05.Control-Details/Textarea.md) Enter a long string.
+- [User:](05.Control-Details/User.md) Choose a user.
 - [Voice *(experimental)*:](05.Control-Details/Voice.md) Enter a long string by automatic transcription of spoken words.
 - [YesNo:](05.Control-Details/YesNo.md) Set a boolean field with buttons.
 - [ZIP:](05.Control-Details/ZIP.md) Enter a 5 digit ZIP code
