--- a/docs/WebApps/05.WebApp-Build-Tools.md
+++ b/docs/WebApps/05.WebApp-Build-Tools.md
@@ -24,7 +24,7 @@ Once the WebApp is saved, you will notice two new sections of the [WebApp editor
 
 The Build Tools menu is divided into three sections, each containing several commands.
 
-<img align="left" width="200" height="467" src="img/03-WebApp-Build-Tools-Menu.png">
+![!Create a WebApp configuration screen](img/03-WebApp-Build-Tools-Menu.png)
 
 * **Angular**: This section contains framework-specific commands. For Angular, this includes generating new components, adding packages, and viewing and editing the project's `angular.json` specification. This section also contains commands to build for development and production.
 * **NPM**: This section enables users to manage their package list via NPM by providing install, uninstall, and update commands. Note that the commands in this section require an active internet connection.
