--- a/docs/DataPortals/04.ContainerSheet.md
+++ b/docs/DataPortals/04.ContainerSheet.md
@@ -33,6 +33,7 @@ The three required columns, [Name,](06.Setting-Details/Name.md) [Type,](06.Setti
 - [Radio:](05.Control-Details/Radio.md) Select one of several predefined values. Also see [Categories.](05.Categories.md)
 - [Rating:](05.Control-Details/Rating.md) Give a whole number rating within a customizable range.
 - [Reference:](05.Control-Details/Reference.md) Choose an instance of another container within the same DataPortal
+- [SaveButton:](05.Control-Details/SaveButton.md) Create a button that can be used to save all the results on the page.
 - [Spin:](05.Control-Details/Spin.md) Select a numerical value.
 - [SSN:](05.Control-Details/SSN.md) Enter a Social Security Number.
 - [Tab:](05.Control-Details/Tab.md) Split some fields of a container into a visually distinct tab.
