--- a/docs/DataPortals/06.SettingSheet.md
+++ b/docs/DataPortals/06.SettingSheet.md
@@ -46,4 +46,4 @@ Settings for a single container are set in sheets named `<ContainerName>.setting
 | TitleLabel                        |                                                |                  |                              |
 | TabLocation                       |                                                | Top              | Side/Vertical, Top/Horizonal |
 | TitleReference                    |                                                |                  |                              |
-
+| BigId                             | Makes the Id column an Int64                   | Off              | On/True, Off/False           |
