--- a/docs/Monitoring/02.Resource-Network.md
+++ b/docs/Monitoring/02.Resource-Network.md
@@ -69,6 +69,7 @@ Available resource types:
 - [Key](../Keys/01.Overview.md)
 - [QueryView](../QueryViews/01.Overview.md)
 - [Run](../DataFlows/10.Runs.md) <small>Note that DataFlow runs are never intermingled with other resources in a resource network. Runs cannot be included in a network with non-run resources.</small>
+- [TestSuite](../DataFlows/Testing.md#test-suites)
 - [UserDetail](../Users-and-Groups/01.Overview.md)
 - [WebApp](../WebApps/01.Overview.md)
 
@@ -90,3 +91,4 @@ More resource and connection types will be added over time. These are the connec
 - **Nested DataFlow**: DataFlow A calls DataFlow B as a module
 - **Nested Run**: DataFlow Run A called DataFlow Run B as a module
 - **Alert Activated Run**: DataFlow Run A asynchronously activated DataFlow Run B
+- **TestSuite Included DataFlow**: TestSuite A includes DataFlow B as one of its tests
