--- a/docs/WebApps/02.WebApp-Create-New.md
+++ b/docs/WebApps/02.WebApp-Create-New.md
@@ -75,3 +75,6 @@ Finally, the configuration screen comes with two buttons on the top right for:
 
 * `Open WebApp`: This will open up the WebApp in its own tab
 * `Edit Source`: This will open up a [web-based editor](./03.WebApp-Editor.md) to edit the WebApp's source code files (e.g., html, css, js, etc.)
+
+  !!! note
+    While, in general, all "Securable Resources" (e.g., DataFlows, QueryViews, etc.) created by a user are initially private, with permissions able to be [granted](./05.System-Administration.md), WebApps are, by design, viewable by other users.
