--- a/docs/DataFlows/07.Custom-Modules.md
+++ b/docs/DataFlows/07.Custom-Modules.md
@@ -18,13 +18,35 @@ Environment Requirements:
 * Visual Studio (2012 or later)
 * Composable (local copy)
 
-Open Visual Studio and create a New Project. There should be a “Composable Analytics Plugin” template under C#. Select this template, select a name and location, and press the OK button.
+Open Visual Studio and select `Create a New Project`. 
 
-![!Composable Custom Module New Project](img/03.07.Img_1.png)
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img01.png)
+
+Search for the “Composable Analytics Plugin” template. Select this template, and press `NEXT`.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img02.png)
+
+Select a name and location, and press the `CREATE` button.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img03.png)
 
 The default plugin template comes with an example Module plugin:
 
-![!Composable Custom Module New Project](img/03.07.Img_2.png)
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img04.png)
+
+Use the Solution Explorer to find the references and ensure they are set appropriately.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img05.png)
+
+Specifically, look at the `Path` of the reference and set it to the correct path.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img06.png)
+
+If needed, use right click on References, and select `Add Reference...` and use the Reference Manager to add the three libraries, as shown below.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img07.png)
+
+The project can now be Built! In your build directory, you can find the resuting dll file that can then be copied over to your Composable instance `bin` directory (e.g., `C:\Program Files\CompAnalytics\WebApp\bin`). In this case, building the project results in a `ComposableCustomModule.dll` file, since we named the Project `ComposableCustomModule`, in the `C:\Source\ComposableCustomModule\bin\Debug` folder.
 
 ## Examples
 
@@ -52,10 +74,11 @@ namespace CompAnalytics.Execution.Modules
 }
 ```
 
-If you were to save this in the project CompAnalytics.Execution.Modules, under the filename MyModule.cs (for example), then in the Composable Designer you see a Module named “My Module” in the operators bin. This Module has no inputs or outputs, and does not do anything visible in the browser when it is run; however, if you debug the IIS process in Visual Studio while running it, you will see “Hello World!” written to the console output.
+Follow the instructions above to build the project and copy over the resulting dll file to the Composable instance `bin` directory (e.g., `C:\Program Files\CompAnalytics\WebApp\bin`).
 
-!!! note
-    CompAnalytics.Execution.Modules is only one possible namespace; Modules can exist in any namespace.
+In the Composable Designer, since we specified `Name = "Hello World"` and `Category = ModuleCategory.Operator`, this custom Module will appear as `Hello World` in the `Operators` bin within the Module Library on the left side of the canvas. This Module has no inputs or outputs. If you simply Run the DataFlow and open up the Trace tab in the Output and Progress Panel at the bottom of the Designer, you will see “Hello World!” written to the console output.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img08.png)
 
 Every Module class inherits from `ModuleExecutor` (which specifies the Execute method), and has the `ModuleType` and `Description` attributes associated with it. Here is what the attribute parameters do:
 
@@ -66,6 +89,9 @@ Every Module class inherits from `ModuleExecutor` (which specifies the Execute m
 - **ModuleType.EditableInputs**: Not used in this example.
 - **ModuleType.Width**: Not used in this example. The default width of the Module in the Composable Designer. If not specified, it is 150 pixels.
 - **Description.Description**: The text which appears in tooltips and in the Module Info box in the Composable Designer.
+
+!!! note
+    comp.companalytics is only one possible namespace; Modules can exist in any namespace (e.g., CompAnalytics.Execution.Modules).
 
 #### Sine Module with Inputs and Outputs
 
@@ -101,6 +127,8 @@ namespace CompAnalytics.Execution.Modules
 ```
 
 When you view this Module in the Composable Designer, you will see that it has an input and an output; its input is a double, which it calculates the sine of and then sends this to the output.
+
+![!Composable Custom Module New Project](img/CustomModuleExtension_Img09.png)
 
 For every input that you want a Module to have, give that Module's class a public ModuleInput property with default getters and setters. The Description attribute, again, specifies the tooltip text. The type parameter to ModuleInput specifies the type of the input. ModuleOutput works analogously.
 
