--- a/docs/DataFlows/07.Custom-Modules.md
+++ b/docs/DataFlows/07.Custom-Modules.md
@@ -37,7 +37,7 @@ Specifically, look at the `Path` of the reference and set it to the correct path
 
 ![!Composable Custom Module New Project](img/CustomModuleExtension_Img06.png)
 
-If needed, use right click on References, and select `Add Reference...` and use the Reference Manager to add the three libraries, as shown below.
+If needed, to set the Paths or other Properties, right click on References, and select `Add Reference...` and use the Reference Manager to add the three dll libraries, as shown below.
 
 ![!Composable Custom Module New Project](img/CustomModuleExtension_Img07.png)
 
