--- a/docs/DataFlows/07.Custom-Modules.md
+++ b/docs/DataFlows/07.Custom-Modules.md
@@ -181,11 +181,6 @@ namespace TextAnalytics
             Result.Set(context, result);
         }
 
-        /// <summary>
-        /// Counts the words in a list of words
-        /// </summary>
-        /// <param name="words"></param>
-        /// <returns></returns>
         private Dictionary<string, int> CountWords(List<string> words)
         {
             // Count Words
@@ -203,12 +198,6 @@ namespace TextAnalytics
             return counts;
         }
 
-        /// <summary>
-        /// Converts a dictionary of word, count pairs into a table
-        /// </summary>
-        /// <param name="counts"></param>
-        /// <param name="context"></param>
-        /// <returns></returns>
         private Table CreateTable(Dictionary<string, int> counts, IExecutionContext context)
         {
             ITableExtension ops = context.FindExtension<ITableExtension>();
@@ -231,11 +220,7 @@ namespace TextAnalytics
             return table;
         }
 
-        /// <summary>
-        /// Splits a string of text into a list of words
-        /// </summary>
-        /// <param name="text"></param>
-        /// <returns></returns>
+        // Splits a string of text into a list of words
         private List<string> SplitIntoWords(string text)
         {
             return text.Split(new char[] { '\t', ' ', '\r', '\n' }, StringSplitOptions.RemoveEmptyEntries)
