--- a/docs/Composable-Platform/01.Overview.md
+++ b/docs/Composable-Platform/01.Overview.md
@@ -13,9 +13,14 @@ As the saying goes, "Data is eating the software that is eating the world," and 
 
 Data professionals - software developers, data engineers, data scientists, analysts, IT and business users - are responsible for delivering and leveraging data products. And these data professionals are increasingly adopting DevOps and DataOps best practices through end-to-end platforms like Composable, to quickly and easily operationalize their data intelligence solutions.
 
-Composable is a full-stack data operations platform that is a proven technology for operationalizing AI and ML applications.
+Composable is a full-stack data operations platform that is a proven technology for operationalizing AI and ML applications. By providing a highly scalable and flexible environment, Composable enables users to:
+
+- Automate complex data workflows
+- Reduce time-to-insight with reusable data pipelines
+- Collaborate across teams with shared data assets
+- Govern and monitor data quality in real time
 
 !!! note "Why DataOps Matters"
-    “28% of applications do not make it into production” - [Gartner Research](https://composable.ai/composable-gartner-dataops/)
+“28% of applications do not make it into production” - Gartner Research
 
-In this sections, we will review the main structure, navigation and product areas of the Composable DataOps Platform.
+In this section, we will review the main structure, navigation, and product areas of the Composable DataOps Platform.
