--- a/docs/Getting-Started/03-3.Azure-Authentication.md
+++ b/docs/Getting-Started/03-3.Azure-Authentication.md
@@ -9,6 +9,8 @@ some_url: https://docs.composable.ai
 
 # Enabling Azure AD Authentication for Composable
 
+By integrating Microsoft Entra ID (formerly Azure AD) authentication with Composable, organizations can meet Multi-Factor Authentication (MFA) and Modern Digital Authentication (MDA) requirements, ensuring compliance with security best practices. Enforcing MFA is critical for data applications, as it significantly reduces the risk of unauthorized access, protects sensitive business intelligence, and prevents credential-based attacks. Given that data platforms often contain proprietary or regulated information, implementing strong authentication safeguards helps mitigate security threats and enhances overall data governance.
+
 !!!note
     **Note:** Microsoft has rebranded **Azure Active Directory (Azure AD)** as **Microsoft Entra ID**. While the functionality remains the same, you may see references to both names in the Azure Portal and documentation. This guide uses the updated **Entra ID** terminology, but older references to **Azure AD** may still appear.
 
@@ -78,7 +80,7 @@ Modify the `Web.config` file in Composable by adding or updating the following k
 </configuration>
 ```
 
-### Key Descriptions:
+**Key Descriptions:**
 - **AzureADAuthClientId**: Corresponds to the **Application (Client ID)** in the Azure App Registration **Overview** page.  
 - **AzureADAuthTenantId**: Corresponds to the **Directory (Tenant ID)** in the Azure App Registration **Overview** page.  
 - **AzureADAuthAutoApprove**:  
@@ -86,6 +88,3 @@ Modify the `Web.config` file in Composable by adding or updating the following k
   - If set to **False**, an administrator must manually approve the account before the user can log in.  
 
 Once these configurations are set, Azure AD authentication will be enabled for Composable.
-
-!!! note
-    By integrating Microsoft Entra ID (formerly Azure AD) authentication with Composable, organizations can meet Multi-Factor Authentication (MFA) and Modern Digital Authentication (MDA) requirements, ensuring compliance with security best practices. Enforcing MFA is critical for data applications, as it significantly reduces the risk of unauthorized access, protects sensitive business intelligence, and prevents credential-based attacks. Given that data platforms often contain proprietary or regulated information, implementing strong authentication safeguards helps mitigate security threats and enhances overall data governance.
