Adding information about run filtering options

--- a/docs/DataFlows/10.Runs.md
+++ b/docs/DataFlows/10.Runs.md
@@ -49,7 +49,7 @@ On the Run History page, the Run Settings panel allows the user to:
 
 ### Past Runs
 
-On the Run History page, the Past Runs panel provides an audit trail of all saved past Runs. A list is provided showing the start and end times, duration, status, number of results and the User that executed the DataFlow. Importantly, two buttons are available to view the Run details and to open the Run in the DataFlow Designer. Doing so, a user can inspect a given past run, including all intermediary results. This is a very powerful and valuable feature, since it provides an opportunity, in case of any errors, to open a given Run and debug it in the Designer or Resume execution.
+On the Run History page, the Past Runs panel provides an audit trail of all saved past Runs. A list is provided showing the start and end times, duration, status, number of results and the User that executed the DataFlow. You can filter runs by their Start Time, End Time, or Result to locate specific runs more efficiently. Importantly, two buttons are available to view the Run details and to open the Run in the DataFlow Designer. Doing so, a user can inspect a given past run, including all intermediary results. This is a very powerful and valuable feature, since it provides an opportunity, in case of any errors, to open a given Run and debug it in the Designer or Resume execution.
 
 !!! note
     A `Share` button is available in the top right of the Run History page which provides the option to assign permissions on Runs.
